# rotdetect_alg

./: .gitignore  README.md  config.json  install_deps.sh  start_rotdetect.py
backend/: pyproject.toml
backend/rotdetect/: api.py  schemas.py
backend/rotdetect/core/: __init__.py  amplitude.py  config.py  data.py  peaks.py  pipeline.py  plot_payloads.py  preprocess.py  ransac.py  refine.py  scan.py  score.py
backend/tests/: test_api_analyze.py  test_kic_regression.py  test_pipeline_synthetic.py
docs/: asymptotic_gmode_period_spacing_search.md  implementation_architecture.md
examples/: test_periods.csv  test_periods_noisy.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts  vite-env.d.ts
frontend/src/components/: CandidateTable.tsx  DiagnosticCharts.tsx  PlotPanel.tsx  ResultSummary.tsx  UploadPanel.tsx  candidateTriptych.ts
